--- a/organizer4github/src/styles.css
+++ b/organizer4github/src/styles.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url(/assets/bgORGANIZER.avif);
+    background-image: url(/organizer4github/assets/bgORGANIZER.avif);
     color: rgb(26, 26, 26);
   font-family: Arial, Helvetica, sans-serif;
 background-color: #b1ceff6f;
