--- a/organizer4github/src/styles.css
+++ b/organizer4github/src/styles.css
@@ -1,302 +1,177 @@
 body{
-    background-image: url(./assets/bgORGANIZER.avif);
-    color: rgb(26, 26, 26);
-  font-family: Arial, Helvetica, sans-serif;
-background-color: #b1ceff6f;
-}
-.opened{
-    animation: openerUpper 2500ms forwards;
-};
-
-.first{
-    padding-top: 15px
-}
-.openedUp{
-    display: none;
+   font-family: "Poppins", sans-serif;
 }
 
-.startUpScreen{
-    display: none;
+@keyframes slider{ from{
+    margin-left: 100%
 }
+to {margin-left: 0%}}
 
-.openerLower{
+.inventoryDiv{
     width: 100%;
-    height: 110vh;
-    position: absolute;
-    z-index: 100;
+    text-align: center;
+    background-color: rgb(213, 220, 5);
+    padding: 10px;
 }
 
 .wrapper{
+    width: 100vw;
     height: 100vh;
+    display: flex;
 }
 
+@media (max-width: 450px) {
+    .wrapper{
+        display: flex;
+        flex-wrap: wrap;
+    }
+    .left{
+        width: 100vw;
+        justify-content: start;
+    }
+    .left h2{
+        padding:0.5rem;
+        background-color: rgb(83, 83, 83);
+        width: 110px;
+        color: white;
+        border-radius: 2px;
+        margin-top: 5px;
+        margin-bottom: 5px;
+        margin-left: 5px;
+    }
+    .row{
+        font-size: 10px;
+    }
+}
 
-#item, #item2, #item3{
-    cursor: pointer;
+@media (min-width: 450px){
+    .left{
+        width: 30vw;
+        height: 100vh;
+        background-color: rgb(221, 233, 255);
+        color: white;
+    }
+    .left h2{
+        padding-left: 1rem;
+        background-color: rgb(83, 83, 83);
+        font-size: 20px;
+        padding: 5px;
+        margin-top: 10px;
+    }
+    .inventoryDiv{
+        color: black;
+    }
 }
-#item3:hover{
-    color: rgb(59, 129, 204);
+
+.right{
+    display: none;
 }
-#item2:hover{
-    color: rgb(59, 129, 204);
+.remove{
+    display: block;
+    animation: slider 500ms;
+
 }
-#item:hover{
-    color: rgb(59, 129, 204);
-} 
-.leftbar{
-    backdrop-filter: blur(9px) saturate(180%);
-    -webkit-backdrop-filter: blur(9px) saturate(180%);
-    background-color: #007cc08f;
-    border: 1px solid rgba(255, 255, 255, 0.125);
-}
-.leftbar h1, h3{
+
+.close{
+    background-color: red;
+    padding: 0.5rem;
+    margin-left: 5px;
+    border-radius: 2px;
     color: white;
 }
 
-.fa-caret-down{
-    transform: rotate(-90deg);
-}
-.arrowDown{
-    transform: rotate(0deg);
-    transition: 200ms;
+.right{
+    width: 100%;
+    height: 100%;
+    justify-content: center;
 }
 
-.itemBox, .itemBox2, .itemBox3{
+
+
+.row p{
+    width: 20%;
+    margin-left: 1rem;
+}
+.row{
+    border-bottom: solid 2px rgb(165, 165, 165);
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.lables{
+    justify-content: center
+}
+.lables h1{
+    margin-left: 1rem;
+    width: 20%;
+}
+
+.whoops{
     display: none;
 }
 
 .show{
     display: block;
-    margin: 0px;
-    animation: fader 100ms;
+    text-align: center;
+    color: red;
 }
 
-.itemBoxInnerDiv, .itemBoxInnerDiv2, .itemBoxInnerDiv3{
-  display: flex;
-    width: 100%;
-}
-
-
-
-@keyframes fader{
-    from {opacity: 0;
-    margin-top: -100px}
-    to {opacity: 100;
-    margin-top: 0px;}
-}
-
-@keyframes openerUpper{
-    from{opacity: 100;}
-    to{opacity: 0;}
-}
-
-
-.name{
-    font-weight: 700;
-}
-
-.qty{
-    font-weight: 700;
-    padding-right: 5px;
-}
-
-.qtySection{
-    width: 100%;
-    text-align: right;
-    
-}
-
-.qtySection p{
-    padding-right: 6px;
-    padding-top: 5px;
-    padding-bottom: 5px;
-}
-.qtySection2 p{
-    padding-right: 6px;
-    padding-top: 5px;
-    padding-bottom: 5px;
-}
-.nameSection p{
-    width: 170px;
-    padding-top: 5px;
-    padding-bottom: 5px;
-    white-space: nowrap;
-   
-}
-
-
-.qtySection2{
-    width: 100%;
-    text-align: right;
-}
-.nameSection2 p{
-    width: 170px;
-    padding-top: 5px;
-    padding-bottom: 5px;
-}
-
-.nameSection3 p{
-    width: 170px;
-    padding-top: 5px;
-    padding-bottom: 5px;
-}
-.qtySection3{
-    width: 100%;
-    text-align: right;  
-}
-.qtySection3 p{
-    padding-top: 5px;
-    padding-bottom: 5px;
-    padding-right: 6px;
-}
-
-.hide{
+.flipshower{
     display: none;
 }
-
-#taskBtn{
-    cursor: pointer;
-}
-
-.agenda{
-    width: 800px;
-    height: 600px;
-    margin-left: 200px;
-    backdrop-filter: blur(9px) saturate(180%);
-    -webkit-backdrop-filter: blur(9px) saturate(180%);
-    background-color: #00a6ff8f;
-    border: 1px solid rgba(255, 255, 255, 0.125);
-}
-
-.agendaBox{
-    width: 400px;
-    height: 500px;
-    margin-left: 20px;
-    border-radius: 10px;
-
-}
-
 
 .flip-card {
     background-color: transparent;
     width: 300px;
     height: 400px;
-    perspective: 1000px;
+    border: 1px solid #f1f1f1;
+    perspective: 1000px; 
+    
   }
   
+ 
   .flip-card-inner {
     position: relative;
     width: 100%;
     height: 100%;
     text-align: center;
-    transition: transform 0.6s;
+    transition: transform 0.8s;
     transform-style: preserve-3d;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   }
   
-   .flip {
+  
+  .flip-cardFlip .flip-card-inner {
     transform: rotateY(180deg);
   }
-  
+
   .flip-card-front, .flip-card-back {
     position: absolute;
     width: 100%;
     height: 100%;
     -webkit-backface-visibility: hidden;
     backface-visibility: hidden;
+    
   }
+  
   
   .flip-card-front {
-    background-color:#143e5a;
+    background-color: #bbb;
     color: black;
-    border-radius: 5px;
+    font-size: 30px;
   }
   
-  .flip-card-back {
-    background-color: #143e5a;
-    color: white;
-    transform: rotateY(180deg);
-    border-radius: 5px;
-  }
-
-  .info{
-    width: 300px;
-    font-size: 12px;
-    margin-top: 80px;
-  }
-  .description{
-    width: 200px;
-    height:200px ;
-  }
-
-  .details, .details2, .details3{
-    color: rgb(104, 169, 255);
-    cursor: pointer;
-    padding-top:5px;
-    padding-bottom:5px ;
-  }
-  .details:hover, .details2:hover, .details3:hover{
-    background-color: rgb(171, 171, 171) ;
-  }
-
-
  
-  
-
-  .detailsBox{
-    display: none;
+  .flip-card-back {
+    background-color: rgb(213, 220, 5);
+    color: black;
+    transform: rotateY(180deg);
   }
-  
 
-
-.showdetails{
-display: flex;
-width: 100vw;
-height: 100%;
-    white-space: nowrap;
-    backdrop-filter: blur(9px) saturate(180%);
-    -webkit-backdrop-filter: blur(9px) saturate(180%);
-    background-color: #ccccccb8;
-    border: 1px solid rgba(255, 255, 255, 0.125);
-};
-
-.width{
-    width: 600px;
-    color: green
-}
-
-
-
-
-
-
-
-
-
-@media  (max-width: 1300px) {
-    .mobileViewNotice{
-        display: flex;
-        justify-content: center;
-       
-    }
-    .mobileViewNotice h1{
-        background-color: red;
-    }
-}
-
-@media  (min-width: 1300px) {
-    .mobileViewNotice{
-        display: none;
-        
-    }
-    .mobileViewNotice h1{
-        display: none;
-    }
-}
-
-.ItemBoxInnerDiv{
-    background-color: green;
-}
-
+  .flipicon{
+    font-size: 100px;
+    margin-top: 8rem;
+  }
 
 
