--- a/organizer4github/src/styles.css
+++ b/organizer4github/src/styles.css
@@ -27,6 +27,9 @@ to {margin-left: 0%}}
     }
     .left{
         width: 100vw;
+        height: 40vh;
+        display: flex;
+        flex-wrap: wrap;
         justify-content: start;
     }
     .left h2{
@@ -85,7 +88,6 @@ to {margin-left: 0%}}
     height: 100%;
     justify-content: center;
 }
-
 
 
 .row p{
@@ -174,4 +176,41 @@ to {margin-left: 0%}}
     margin-top: 8rem;
   }
 
+  .lastUpdate{
+    height: 6.75rem;
+    width: 100%;
+    background-color: #000a91;
+   font-size: 15px;
+   color: #ffffff;
+   margin-top: 5px;
+   border-radius: 5px;
+   margin-left: 5px;
+   margin-right: 5px;
+   display: flex;
+   flex-wrap: wrap;
+  }
+  .lastUpdate2{
+    height: 6.75rem;
+    width: 100%;
+    background-color: #910000;
+   font-size: 15px;
+   color: #ffffff;
+   margin-top: 5px;
+   border-radius: 5px;
+   margin-left: 5px;
+   margin-right: 5px;
+   display: flex;
+   flex-wrap: wrap;
+  }
+   .updateDiv{
+    width: 67%;
+   }
+
+  .lastUpdateInner{
+    width: 100%;
+    height: 4rem;
+    display: flex;
+  }
+
+  
 
