--- a/organizer4github/src/styles.css
+++ b/organizer4github/src/styles.css
@@ -42,6 +42,10 @@ to {margin-left: 0%}}
         margin-bottom: 5px;
         margin-left: 5px;
     }
+    .updateDiv2{
+        display: none;
+    }
+    
     .row{
         font-size: 10px;
     }
@@ -63,6 +67,9 @@ to {margin-left: 0%}}
     }
     .inventoryDiv{
         color: black;
+    }
+    .updateDiv{
+        display: none;
     }
 }
 
